<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Apps Company Demo App</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="regular_price">Regular Price:</string>
    <string name="sale_price">Sale Price:</string>
    <string name="photo">Photo:</string>
    <string name="colors">Colors:</string>
    <string name="stores">Stores:</string>
    <string name="create_product">Create Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="update_product">Update Product</string>
    <string name="title_activity_create_product">CreateProductActivity</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="store1">Kohls</string>
    <string name="store2">Walmart</string>
    <string name="store3">Target</string>
    <string name="store4">TJ Max</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="created">Created On:</string>
    <string name="title_activity_modify_product">ModifyProductActivity</string>

</resources>