<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo_mobile_apps" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageProductImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="product image"
                    android:padding="10dp"
                    android:src="@drawable/logo_mobile_apps" />
                
                 <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(click to expand)"
                        android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtDetailName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/name"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/description"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailRegularPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/regular_price"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailSalePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/sale_price"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailColors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/colors"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailStores"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/stores"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/txtdetailCreatedOn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/created"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/border"
                        android:text="Delete"
                        android:textColor="#F00" />

                    <Button
                        android:id="@+id/btnModify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/border"
                        android:text="Modify"
                        android:textColor="#F00" />
                </LinearLayout>
            </LinearLayout>

            <!--
         This initially-hidden ImageView will hold the expanded/zoomed version of
         the images above. Without transformations applied, it takes up the entire
         screen. To achieve the "zoom" animation, this view's bounds are animated
         from the bounds of the thumbnail button above, to its final laid-out
         bounds.
            -->

            <ImageView
                android:id="@+id/expanded_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="zoom"
                android:visibility="invisible" />
        </FrameLayout>
    </LinearLayout>

</ScrollView>